error.txt
haris@haris-desktop:~/celestial-nav/build$ cmake --build .
[ 12%] Building CXX object CMakeFiles/celestial_nav.dir/src/main.cpp.o
[ 25%] Building CXX object CMakeFiles/celestial_nav.dir/src/image_acquisition.cpp.o
[ 37%] Building CXX object CMakeFiles/celestial_nav.dir/src/preprocessing.cpp.o
[ 50%] Building CXX object CMakeFiles/celestial_nav.dir/src/star_detection.cpp.o
[ 62%] Building CXX object CMakeFiles/celestial_nav.dir/src/star_matching.cpp.o
[ 75%] Building CXX object CMakeFiles/celestial_nav.dir/src/location_determination.cpp.o
/home/haris/celestial-nav/src/location_determination.cpp: In static member function ‘static double LocationDetermination::calculateAltitude(const Eigen::Vector2d&, const ReferenceStarData&, const std::chrono::_V2::system_clock::time_point&)’:
/home/haris/celestial-nav/src/location_determination.cpp:140:23: error: ‘const struct ReferenceStarData’ has no member named ‘ra’
  140 |     raDecToAltAz(star.ra, star.dec, lat, lon, lst, alt, az);
      |                       ^~
/home/haris/celestial-nav/src/location_determination.cpp:140:32: error: ‘const struct ReferenceStarData’ has no member named ‘dec’
  140 |     raDecToAltAz(star.ra, star.dec, lat, lon, lst, alt, az);
      |                                ^~~
gmake[2]: *** [CMakeFiles/celestial_nav.dir/build.make:146: CMakeFiles/celestial_nav.dir/src/location_determination.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:83: CMakeFiles/celestial_nav.dir/all] Error 2
gmake: *** [Makefile:91: all] Error 2